Fix bug with image stretching on IOS devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,6 +370,7 @@ footer {
 
 .gallery-column img {
     padding: 1px; /*Small gap between images*/
+    align-items: flex-start;
 }
 
 .gallery-block {
@@ -379,3 +380,4 @@ footer {
 .gallery-block p {
     padding-bottom: 25px; /*Padding between text and gallery images*/
 }
+
